Fixed overflow on textareas

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -188,7 +188,7 @@ textarea {
 .cli-code {
   width: 100%;
   white-space: nowrap;
-  overflow-y: scroll;
+  overflow: auto;
   padding: 23px;
   line-height: 34px;
   font-family: monospace;
